test app in working state

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,15 @@
 @import "bootstrap";
+
+body {
+  padding-top: 20px;
+}
+
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+
+    & input {
+    	margin-bottom: 10px;
+    }
+}
